# mliot-embeddedc-2026-hw

week01/: NPTmain.c  answer.txt
week02/: NguyenPhuocThanhbtvn week2tuluan.docx  main.c
week03/: answers.txt  build_and_flash.bat
week04/: CMakeLists.txt  Linkvideo  answers.txt  maintask3.c  maintask5.c  stm32f103xb_flash.ld
week04/Core/Inc/: stm32f1xx_hal_conf.h
week04/Task4/: main.c
week04/Task5/: main.c
week04/build-arm/: CMakeCache.txt  Makefile  cmake_install.cmake  week04  week04.hex
week04/build-task3/: CMakeCache.txt  Makefile  cmake_install.cmake  week04  week04.hex
week04/build-task3-fixed/: CMakeCache.txt  Makefile  cmake_install.cmake  week04.elf  week04.hex  week04.map
week04/build-task3-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  week04  week04.hex
week04/build-task3-separate/: CMakeCache.txt
week04/build-task4/: CMakeCache.txt
week04/build-task4-fixed/: CMakeCache.txt  Makefile  cmake_install.cmake  week04.elf  week04.hex  week04.map
week04/build-task4-separate/: CMakeCache.txt  Makefile  cmake_install.cmake  week04  week04.hex
week04/build-task5/: CMakeCache.txt
week04/build-task5-fixed/: CMakeCache.txt  Makefile  cmake_install.cmake  week04.elf  week04.hex  week04.map
week04/build-task5-separate/: CMakeCache.txt  Makefile  cmake_install.cmake  week04  week04.hex
week04/cmake/: arm-gcc.cmake
